# ITM_song_popularity

./: .env.example  .gitignore  CHANGELOG.md  analyses.py  controller.py  dataGetter.py  itm_songs_database.csv  main.py  notes.txt  preprocess.py  pyproject.toml  readme.md  report.ipynb  requirements.txt  test.py  utils.py
appendices/: appendix_i.ipynb  appendix_iii.ipynb  appendix_iv.ipynb  appendix_ix.ipynb  appendix_v.ipynb  appendix_vi.ipynb  appendix_vii.ipynb  appendix_viiI.ipynb  appendix_x.ipynb  appendix_xi.ipynb
data/: bs_mape.pickle  bs_models.pickle  bs_r.pickle  bsvm_mape.pickle  bsvm_models.pickle  bsvm_r.pickle  fs_mape.pickle  fs_models.pickle  fs_r.pickle  itm_songs_database_preprocessed.csv  mape.pickle  models.pickle  r.pickle  svm_mape.pickle  svm_models.pickle  svm_r.pickle
database/: itm_songs.csv  itm_songs.json  itm_songs_database.csv  itm_songs_database_preprocessed.csv  itm_songs_preprocessed.csv
src/: analyses.py  data_getter.py  models.py  preprocessing.py  processes.py  profiling.py  utils.py
summaries/: popularity_abs_~_acousticness.txt  popularity_abs_~_acousticness_+_track_number.txt  popularity_abs_~_complexity.txt  popularity_abs_~_complexity_+_track_number_+_explicit.txt  popularity_abs_~_danceability.txt  popularity_abs_~_duration.txt  popularity_abs_~_energy.txt  popularity_abs_~_energy_+_complexity.txt  popularity_abs_~_explicit.txt  popularity_abs_~_instrumentalness.txt  popularity_abs_~_key.txt  popularity_abs_~_loudness.txt  popularity_abs_~_mode.txt  popularity_abs_~_speechiness.txt  popularity_abs_~_tempo.txt  (+21 more)
