[tool.poetry]
name = "itm-song-popularity"
version = "0.2021.0"
description = "freq stats project"
authors = ["ChrisScarred <scarred.chris@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
spotipy = "^2.18.0"
pandas-profiling = "^3.0.0"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
numpy = "^1.20.3"
scipy = "^1.6.3"
python-dotenv = "^0.17.1"
seaborn = "^0.11.1"
statsmodels = "^0.12.2"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^21.5b1"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
